finish all parts

--- a/templates/album_data.html
+++ b/templates/album_data.html
@@ -1,1 +1,3 @@
-"rawr"
+<p>This is a very simple version of showing data, but yours could be more complicated.</p>
+<p>The album title you just submitted was: <b>{{ albumTitle }}</b></p>
+<p>On a scale of 1 to 3, you would give it <b>{{ rating }}</b> stars!</p>
